--- a/.air.toml
+++ b/.air.toml
@@ -2,8 +2,8 @@ root = "."
 tmp_dir = "tmp"
 
 [build]
-cmd = "go build -o ./tmp/nomadbank.exe ./cmd/nomadbank"
-bin = "./tmp/nomadbank.exe"
+cmd = "go build -o ./tmp/nomadbank ./cmd/nomadbank"
+bin = "./tmp/nomadbank"
 args_bin = ["-mode", "dev"]
 include_ext = ["go"]
 exclude_dir = ["tmp", "frontend", "web", "node_modules"]
