chore(frontend): fix build with vitest config

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -28,5 +28,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
 }
