--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,16 +60,16 @@
     "@eslint/js": "^9.39.2",
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router-devtools": "^1.141.2",
+    "@tanstack/react-router-devtools": "1.154.7",
     "@tanstack/router-plugin": "^1.141.2",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@types/node": "^25.0.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.6.0",
     "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.25",
@@ -79,7 +79,7 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.49.0",
-    "vitest": "^3.0.7",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "vitest": "^3.0.7"
   }
 }
